# PhotogateV2

./: .gitattributes  .gitignore  .gitmodules  CNAME  README.md
3DModels/: All_Models-Arm.3mf  All_Models-Box.3mf  All_Models-Painel.3mf  All_Models-ThumbScrew.3mf  All_Models.FCStd
boards/: board.kicad_pcb  board.kicad_pro  board.kicad_sch  ibom.html
boards/jlcpcb/: project.db
boards/jlcpcb/gerber/: board-CuBottom.gbr  board-CuTop.gbr  board-EdgeCuts.gbr  board-MaskBottom.gbr  board-MaskTop.gbr  board-NPTH.drl  board-PTH.drl  board-SilkBottom.gbr  board-SilkTop.gbr  type(one)-CuBottom.gbr  type(one)-CuTop.gbr  type(one)-EdgeCuts.gbr  type(one)-NPTH.drl  (+5 more)
boards/packages3D/: CAP-TH_D4.0-H7.0-P1.5.step  DO-41_D2.4-L4.7-P8.70.wrl  RES-TH_BD3.9-L9.0-P16.00-D0.6.wrl  TO-92-3_L4.8-W3.7-H7.7-P2.54-R.wrl
boards/type(one)/: fp-info-cache  type(one).kicad_pcb  type(one).kicad_prl  type(one).kicad_pro  type(one).kicad_sch  ~type(one).kicad_sch.lck
docs/: CNAME  app.js  hardware.html  ibom.html  index.html  modeling.html  software.html  styles.css
docs/3dmodels/: board.glb  case.gltf
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.h
firmware/main/core/: cronos.c  cronos.h  history.c  history.h  menus.c  menus.h  misc.c  misc.h
firmware/main/experiments/: centripetal.c  centripetal.h  classic.c  classic.h  mechanical.c  mechanical.h  pendulum.c  pendulum.h  spring.c  spring.h
firmware/main/hardware/: counter.c  counter.h  display.c  display.h  encoder.c  encoder.h  memory.c  memory.h
(+5 files in other folders)
